# MedBillOnChain-2

./: .replit  CNAME  Pasted--use-client-import-useState-from-react-import-Button-from-components-ui-button-impor-1728183971568.txt  Pasted--use-client-import-useState-from-react-import-Button-from-components-ui-button-impor-1728186077518.txt  Pasted-Create-a-medical-billing-app-with-the-following-features-User-Interface-UI-Design-the-UI-to-res-1728593708543.txt  app.py  auth.py  billing.py  check_flask.py  crypto.py  index.html  models.py  package-lock.json  package.json  pyproject.toml  routes.py
frontend/: package-lock.json  package.json
frontend/src/components/: PatientInvoiceForm.tsx
migrations/versions/: 0c3a13fda4a3_update_invoice_model.py  1aa03541e6a3_initial_migration.py  70c7eb9ef20c_add_payment_currency_to_billingrecord.py  f81bd0b8d659_add_patient_name_column_to_invoice_model.py
react-app/: webpack.config.js
react-app/src/: MedicalBillingComponent.js  index.js
static/css/: main.css  styles.css
static/js/: dashboard.js  invoice.js  main.js
templates/: analytics.html  base.html  create_invoice.html  dashboard.html  index.html  invoice.html  invoices_list.html  login.html  profile.html  react_app.html
