[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-migrate>=4.0.7",
    "coinbase-commerce>=1.0.1",
    "requests>=2.32.3",
    "python-dotenv",
    "web3>=7.3.0",
]
